# SplicingSitesTransformers

./: .gitignore
apps/backend/: .env.example  config.yaml  nest-cli.json  package-lock.json  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/prisma/migrations/20250612142711_init/: migration.sql
apps/backend/prisma/migrations/20250618143046_parent_dataset_remove_unique_name/: migration.sql
apps/backend/prisma/migrations/20250806205839_init/: migration.sql
apps/backend/prisma/migrations/20250809172502_add_model_type_enum/: migration.sql
apps/backend/prisma/migrations/20250812002729_adding_manual_sequence_lengths/: migration.sql
apps/backend/prisma/migrations/20250813161511_parent_record_unique/: migration.sql
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/common/: constrants.ts
apps/backend/src/common/filters/: http-exception.filter.ts
apps/backend/src/common/interceptors/: logging.interceptor.ts
apps/backend/src/config/: config.service.ts
apps/backend/src/config/interfaces/: config.interface.ts
apps/backend/src/gprc/: extraction.grpc-client.service.ts
apps/backend/src/gprc/interfaces/: extraction.interface.ts
apps/backend/src/gprc/proto/: extraction.proto  model.proto
apps/backend/src/grpc/: extraction.grpc-client.module.ts
apps/backend/src/utils/: observable-to-async.ts
apps/data-worker/: .env.example  pyproject.toml
apps/data-worker/src/: config.py  extractor.py  main.py  server.py
apps/data-worker/src/etl/: genbank.py  gencode.py
apps/llm-api/: dockerfile  pyproject.toml
apps/llm-api/src/: config.py  config.yaml  constrants.py  main.py
apps/llm-api/src/etl/: genbank.py  gencode.py
apps/llm-api/src/grpc/: extraction_server.py
apps/llm-api/src/grpc/extraction/: extraction_server.py
apps/llm-api/src/grpc/protos/: extraction.proto
apps/llm-api/src/llms/protein_translator/: gpt.py
apps/llm-api/src/servers/extraction/: extraction_server.py
apps/llm-worker/: .env.example  .gitignore  pyproject.toml  scritp.py
apps/llm-worker/src/: dna-translator-main.ipynb  initialize.py  interfaces.py  main - ExIn.ipynb  main.ipynb  utils.py
apps/llm-worker/src/llms/: base.py  schemas.py
apps/llm-worker/src/llms/exin_classifier/: bert.py  dnabert.py  gpt.py  prediction.ipynb
apps/llm-worker/src/llms/protein_translator/: blast.py  eval.py  gpt.py  metrics.py  t5.py
apps/llm-worker/src/llms/sliding_window_extraction/: bert.py  dnabert.py  xd.ipynb
apps/llm-worker/src/schemas/: train_params.py
apps/llm-worker/src/utils/: data_collators.py  locations.py  log_collector.py
apps/shared/protos/: data.proto
(+79 files in other folders)
